# oppia-android

./: .bazelrc  BUILD.bazel  build_flavors.bzl  oppia_android_application.bzl  version.bzl
.github/: CODEOWNERS
.github/workflows/: build_tests.yml  unit_tests.yml  wiki.yml
app/: BUILD.bazel  build.gradle
app/src/main/: AppAndroidManifest.xml  DatabindingAdaptersManifest.xml  DatabindingResourcesManifest.xml  RecyclerviewAdaptersManifest.xml  ViewModelManifest.xml  ViewModelsManifest.xml  ViewsManifest.xml
app/src/main/java/org/oppia/android/app/administratorcontrols/: AdministratorControlsActivity.kt  AdministratorControlsActivityPresenter.kt
app/src/main/java/org/oppia/android/app/topic/: TopicTab.kt  (+2 more)
app/src/main/res/layout/: audio_language_item.xml  content_item.xml  developer_options_add_and_delete_profiles.xml  developer_options_add_profile.xml  flashback_card_fragment.xml  item_selection_interaction_items.xml  learn_again_button_item.xml  multiple_choice_interaction_items.xml  text_input_interaction_item.xml
app/src/main/res/values/: ids.xml  strings.xml  untranslated_strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-pcm-rNG/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-sw/: strings.xml
config/src/java/org/oppia/android/config/: AndroidManifest.xml
data/src/test/: AndroidManifest.xml
instrumentation/src/javatests/: AndroidManifest.xml
model/src/main/proto/: arguments.proto  exploration.proto
scripts/: pre-push.sh
scripts/assets/: file_content_validation_checks.textproto  maven_dependencies.textproto  test_file_exemptions.textproto
scripts/src/java/org/oppia/android/scripts/common/: GitHubClient.kt
scripts/src/java/org/oppia/android/scripts/license/: MavenDependenciesRetriever.kt
scripts/src/javatests/org/oppia/android/scripts/license/: MavenDependenciesListCheckTest.kt  MavenDependenciesRetrieverTest.kt
scripts/src/javatests/org/oppia/android/scripts/maven/: GenerateMavenDependenciesListTest.kt
scripts/src/javatests/org/oppia/android/scripts/regex/: RegexPatternValidationCheckTest.kt
scripts/src/javatests/org/oppia/android/scripts/todo/: TodoOpenCheckTest.kt
testing/src/main/java/org/oppia/android/testing/: OppiaTestRule.kt
utility/src/test/: AndroidManifest.xml
wiki/: Bazel-Setup-Instructions-for-Linux.md  Bazel-Setup-Instructions-for-Mac.md  Bazel-Setup-Instructions-for-Windows.md  Gradle--Bazel-Migration-Best-Practices-and-FAQ.md  Oppia-Bazel-Setup-Instructions.md  Overview-of-the-Oppia-Android-codebase-and-architecture.md  Spotlight-Guide.md  Terminology-in-Oppia.md  Troubleshooting-Installation.md
(+118 files in other folders)
