# TODO(#1532): Rename file to 'BUILD' post-Gradle.

load("@dagger//:workspace_defs.bzl", "dagger_rules")
load("//:build_flavors.bzl", "AVAILABLE_FLAVORS", "define_oppia_aab_binary_flavor")

# Corresponds to being accessible to all Oppia targets. This should be used for production APIs &
# modules that may be used both in production targets and in tests.
package_group(
    name = "oppia_api_visibility",
    packages = [
        "//...",
    ],
)

# Corresponds to being accessible to the Oppia binary. This should only be used by production-facing
# modules that must be included in the top-level binary in order for the app to build.
package_group(
    name = "oppia_binary_visibility",
    packages = [
        "//",
    ],
)

# Corresponds to being accessible to Oppia tests. This should be used by fakes & test-only modules
# that can be included in tests for custom state arrangement or to satisfy upstream/downstream
# dependency requirements for components whose production implementations cannot be used in test
# environments.
# TODO(#2773): Remove the open visibility access granted here & instead restrict this access to only
# test targets.
package_group(
    name = "oppia_testing_visibility",
    packages = [
        "//app/...",
        "//data/...",
        "//domain/...",
        "//instrumentation/...",
        "//testing/...",
        "//utility/...",
    ],
)

package_group(
    name = "oppia_e2e_testing_visibility",
    packages = [
        "//instrumentation/...",
    ],
)

# Special visibility group specific to debug mode. This provides access to the target for both the
# Oppia tests and specific debug only packages.
package_group(
    name = "oppia_debug_visibility",
    includes = [
        ":oppia_testing_visibility",
    ],
    packages = [
        "//app/src/main/java/org/oppia/android/app/devoptions/...",
    ],
)

# Special visibility group specific to prod modules. This provides access to the module for both the
# Oppia binary & tests.
package_group(
    name = "oppia_prod_module_visibility",
    includes = [
        ":oppia_binary_visibility",
        ":oppia_testing_visibility",
    ],
)

# TODO(#1640): Move binary manifest to top-level package post-Gradle.

# Define all binary flavors that can be built. Note that these are AABs and thus cannot be installed
# directly. However, their binaries can be installed using mobile-install like so:
#  bazel mobile-install //:oppia_dev_binary
[
    define_oppia_aab_binary_flavor(flavor = flavor)
    for flavor in AVAILABLE_FLAVORS
]

dagger_rules()
